# NiceSSH

./: .gitignore  BOOTSTRAP.md  CHANGELOG.md  CONTRIBUTING.md  LICENSE  README.md  README.zh-CN.md  index.html  manage.sh  package.json  pnpm-lock.yaml  release-please-config.json  release-please-manifest.json  tailwind.config.ts  tsconfig.json  vite.config.ts
.cargo/: .crates.toml  .crates2.json
.github/scripts/: parse_commits.py
.github/workflows/: build-release.yml  notify.yml  tag.yml  test.yml
dist-update/: latest.json  upload.sh
scripts/: README.md  _version_files.sh  check-signer.sh  manage.sh  merge-updater.mjs  release.sh
src/: App.tsx  main.tsx
src-tauri/: .gitignore  Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: config_store.rs  error.rs  fs_safety.rs  git_config.rs  history.rs  lib.rs  main.rs  paths.rs  runner.rs  scanner.rs  ssh_config.rs  ssh_keys.rs  test_helpers.rs
src-tauri/src/commands/: git.rs  history.rs  identity.rs  log_viewer.rs  mod.rs  project.rs  scanner.rs  settings.rs  ssh_add_askpass.rs  ssh_config.rs  ssh_key.rs
src-tauri/tests/: flow_a_b.rs  flow_c_d.rs  is_key_encrypted.rs
src/components/: ContextMenu.tsx  Sidebar.tsx  ThemeProvider.tsx
src/hooks/: useHotkeys.ts  useTheme.ts  useUpdateCheck.ts
src/i18n/: index.ts
src/ipc/: client.ts  git.ts  history.ts  identities.ts  projects.ts  settings.ts  sshAdd.ts  sshConfig.ts  sshKeys.ts
src/lib/: keyPath.ts  update.ts
src/store/: identities.ts  projects.ts  settings.ts
src/styles/: globals.css
(+37 files in other folders)
